Remove junk and enable linear assignement

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -17,7 +17,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "2d3226fe20f74ae5b7f272b08a0057d1": {
+        "6643ec91cf35404fa2ea1885ec8d692c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -30,16 +30,16 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_57b49f8c8ee741f4b1c0f21d46cec3cb",
+            "layout": "IPY_MODEL_63e930a7324a4686a8b89b290cebc711",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_1e3438cc198442f89b3772f144dbe58f",
-              "IPY_MODEL_cf623568e8a944aa8cd173ea5decf07d",
-              "IPY_MODEL_26c67910e3ee4aea9bb3f5391c660a9f"
+              "IPY_MODEL_2ad4c1b75e36419cb7efd9a220aa034f",
+              "IPY_MODEL_c5f711f245e14cc7a2eb221483040fd1",
+              "IPY_MODEL_5eb63af33d154434a62e8380b0d48e08"
             ]
           }
         },
-        "57b49f8c8ee741f4b1c0f21d46cec3cb": {
+        "63e930a7324a4686a8b89b290cebc711": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -91,34 +91,34 @@
             "left": null
           }
         },
-        "1e3438cc198442f89b3772f144dbe58f": {
+        "2ad4c1b75e36419cb7efd9a220aa034f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_d48a4f121f644a3998212b9fe49059a1",
+            "style": "IPY_MODEL_a108cd5d86bc4d82b6baa68b3e31434b",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": "  1%",
+            "value": "  0%",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_bfa9e17a21274c25857a674b5bdf1014"
+            "layout": "IPY_MODEL_883d46d74791470e9e2985cb6dcca3ca"
           }
         },
-        "cf623568e8a944aa8cd173ea5decf07d": {
+        "c5f711f245e14cc7a2eb221483040fd1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_9ceab450aa914fc98a09c245cc959d6d",
+            "style": "IPY_MODEL_b483a5652cde4eab8ca1e91854464b6c",
             "_dom_classes": [],
             "description": "",
             "_model_name": "FloatProgressModel",
@@ -126,38 +126,38 @@
             "max": 23353,
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": 350,
+            "value": 66,
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "orientation": "horizontal",
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_e9305f9c0d6f45b78760924c3b88eda3"
+            "layout": "IPY_MODEL_1fd85e3b4a9f433896d685f122d80b8e"
           }
         },
-        "26c67910e3ee4aea9bb3f5391c660a9f": {
+        "5eb63af33d154434a62e8380b0d48e08": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_b1f7936933af4f1db030df1d2f50869b",
+            "style": "IPY_MODEL_7cd6816ca8dd4645acc3248eed9c72c1",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 350/23353 [01:18&lt;1:26:21,  4.44it/s]",
+            "value": " 66/23353 [00:15&lt;1:24:59,  4.57it/s]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_14272d37baf44cb0b1b625e080ffbf8b"
+            "layout": "IPY_MODEL_a1a07a064ba0499a92aafb544154e15d"
           }
         },
-        "d48a4f121f644a3998212b9fe49059a1": {
+        "a108cd5d86bc4d82b6baa68b3e31434b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -172,7 +172,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "bfa9e17a21274c25857a674b5bdf1014": {
+        "883d46d74791470e9e2985cb6dcca3ca": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -224,7 +224,7 @@
             "left": null
           }
         },
-        "9ceab450aa914fc98a09c245cc959d6d": {
+        "b483a5652cde4eab8ca1e91854464b6c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -240,7 +240,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "e9305f9c0d6f45b78760924c3b88eda3": {
+        "1fd85e3b4a9f433896d685f122d80b8e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -292,7 +292,7 @@
             "left": null
           }
         },
-        "b1f7936933af4f1db030df1d2f50869b": {
+        "7cd6816ca8dd4645acc3248eed9c72c1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -307,7 +307,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "14272d37baf44cb0b1b625e080ffbf8b": {
+        "a1a07a064ba0499a92aafb544154e15d": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -952,9 +952,9 @@
         "            self.theta,\n",
         "            *self.phis\n",
         "        )\n",
-        "        lr = 0.1\n",
+        "        lr = 0.001\n",
         "        # lr = sum(self.ds.aspect_max) * 0.01 / train_size # for whole batch iteration\n",
-        "        weight_decay = 0.1\n",
+        "        weight_decay = 0.00\n",
         "        momentum = 0.9\n",
         "        if optim == 'sgd':\n",
         "            self._optim = torch.optim.SGD(\n",
@@ -1005,58 +1005,23 @@
         "                        res_sents_scores = -res_sents_scores + denoms\n",
         "\n",
         "                        sents_aspect_preds_max = torch.argmin(res_sents_scores, dim=1)\n",
-        "                        # row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
+        "                        row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
         "                        sents_aspect_preds_linear = sents_aspect_preds_max\n",
         "                        \n",
         "                        # (most likely) aspect assignments (5)\n",
-        "                        # sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
+        "                        sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
         "                        \n",
         "                        # sentence likelihood (6)\n",
         "                        batch_nlls.append(res_sents_scores.take_along_dim(sents_aspect_preds_linear[:, None], dim=1).sum())\n",
         "\n",
-        "                        # for j in range(len(rev_sents_ids)):\n",
-        "                            # if not rev_sents_ids[j]: # ignore empty sentences if they are list, but not tensor (unused)\n",
-        "                            # if 0 == rev_sents_ids[j].numel(): # ignore empty sentences\n",
-        "                            #     continue\n",
-        "                            # sen_thetas = rev_thetas[j]\n",
-        "                            # sen_phis   = rev_phis[j]\n",
-        "\n",
-        "                            # aspect_pred = sents_aspect_preds_linear[j]\n",
-        "\n",
-        "                            # aspect_rating = review_aspects_scores[aspect_pred]\n",
-        "                            # theta_score_ll = sen_thetas[:, aspect_pred].sum()\n",
-        "                            # phi_score_ll = sen_phis[aspect_pred][:, aspect_rating].sum()\n",
-        "\n",
-        "                            # nll = torch.neg(theta_score_ll + phi_score_ll)\n",
-        "                            # batch_nlls.append(nll)\n",
-        "                            # batch_nlls.append(res_sents_scores[j][aspect_pred])\n",
-        "\n",
-        "                        # batch_nlls.append(denoms.sum())\n",
-        "\n",
-        "                    # ic(len(batch_nlls))\n",
         "                    batch_nll = torch.stack(batch_nlls).sum()\n",
         "                    self._optim.zero_grad(set_to_none=True)\n",
         "                    if 0 == i % 100:\n",
         "                        ic(batch_nll)   \n",
-        "                        # self.dump_weights()\n",
+        "                        self.dump_weights()\n",
         "                    batch_nll.backward()\n",
         "\n",
         "                    self._optim.step()\n",
-        "\n",
-        "                    # ic(nll)\n",
-        "                    # ic(len(batch_nlls))\n",
-        "                    # ic(denoms)\n",
-        "                    # ic(rev_sents_ids)\n",
-        "                    # ic(sen_phis)\n",
-        "                    # ic(sen_thetas)\n",
-        "                    # ic(theta_score_ll + phi_score_ll)\n",
-        "                    # ic(theta_score_ll)\n",
-        "                    # ic(phi_score_ll)\n",
-        "                    # ic(batch_nll)\n",
-        "                    # ic(denoms.size())\n",
-        "                    # ic((len(rev_sents_ids),))\n",
-        "                    # ic(denoms.size() == (len(rev_sents_ids),))\n",
-        "                    # raise BaseException\n",
         "                self._sched.step()\n",
         "                    \n",
         "        except KeyboardInterrupt:\n",
@@ -1080,7 +1045,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 200,
+      "execution_count": 215,
       "outputs": []
     },
     {
@@ -1091,7 +1056,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 201,
+      "execution_count": 216,
       "outputs": []
     },
     {
@@ -1103,24 +1068,24 @@
         "id": "iGr0C7WLqsu0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 153,
+          "height": 101,
           "referenced_widgets": [
-            "2d3226fe20f74ae5b7f272b08a0057d1",
-            "57b49f8c8ee741f4b1c0f21d46cec3cb",
-            "1e3438cc198442f89b3772f144dbe58f",
-            "cf623568e8a944aa8cd173ea5decf07d",
-            "26c67910e3ee4aea9bb3f5391c660a9f",
-            "d48a4f121f644a3998212b9fe49059a1",
-            "bfa9e17a21274c25857a674b5bdf1014",
-            "9ceab450aa914fc98a09c245cc959d6d",
-            "e9305f9c0d6f45b78760924c3b88eda3",
-            "b1f7936933af4f1db030df1d2f50869b",
-            "14272d37baf44cb0b1b625e080ffbf8b"
+            "6643ec91cf35404fa2ea1885ec8d692c",
+            "63e930a7324a4686a8b89b290cebc711",
+            "2ad4c1b75e36419cb7efd9a220aa034f",
+            "c5f711f245e14cc7a2eb221483040fd1",
+            "5eb63af33d154434a62e8380b0d48e08",
+            "a108cd5d86bc4d82b6baa68b3e31434b",
+            "883d46d74791470e9e2985cb6dcca3ca",
+            "b483a5652cde4eab8ca1e91854464b6c",
+            "1fd85e3b4a9f433896d685f122d80b8e",
+            "7cd6816ca8dd4645acc3248eed9c72c1",
+            "a1a07a064ba0499a92aafb544154e15d"
           ]
         },
-        "outputId": "107d6a87-704d-4d88-b3e0-784fee6d2ba1"
+        "outputId": "ba040d46-58d6-4b7b-e7c1-7d083deae4be"
       },
-      "execution_count": 202,
+      "execution_count": 217,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1098,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2d3226fe20f74ae5b7f272b08a0057d1",
+              "model_id": "6643ec91cf35404fa2ea1885ec8d692c",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1147,10 +1112,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "ic| batch_nll: tensor(446.4347, grad_fn=<SumBackward0>)\n",
-            "ic| batch_nll: tensor(62.3230, grad_fn=<SumBackward0>)\n",
-            "ic| batch_nll: tensor(72.6778, grad_fn=<SumBackward0>)\n",
-            "ic| batch_nll: tensor(55.8481, grad_fn=<SumBackward0>)\n"
+            "ic| batch_nll: tensor(430.0210, grad_fn=<SumBackward0>)\n"
           ]
         },
         {
@@ -1169,24 +1131,22 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 167
+          "base_uri": "https://localhost:8080/"
         },
         "id": "qze7F_s0p5mo",
-        "outputId": "1843833b-1889-4d5b-ac41-7d6c301eb2b2"
+        "outputId": "bb33964e-38ee-4499-be3e-90a0c821aa3e"
       },
-      "execution_count": 159,
+      "execution_count": 211,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-159-8c238c4dd9d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_sparse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'is_sparse'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 211
         }
       ]
     },
