Refine NLL plots

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "at8Z-ETyKngp"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "rvQgSM-fB7YP",
         "colab": {
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "1rYfSug_5Vlf"
       },
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "B_QTo-xBCelp",
         "colab": {
@@ -375,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "N5zmSYDBCg4B",
         "colab": {
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "FYkddHhTN8vW"
       },
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "RZ0p4rxp2UJE",
         "colab": {
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
@@ -494,6 +494,8 @@
         "from os import path\n",
         "from wordcloud import WordCloud\n",
         "import matplotlib.pyplot as plt\n",
+        "import functools\n",
+        "from operator import iadd\n",
         "\n",
         "class Model():\n",
         "    def __init__(self, dataset):\n",
@@ -527,7 +529,7 @@
         "        # self.phis = [phi / phi.sum(dim=0) for phi in self.phis]\n",
         "        for phi in self.phis: phi.requires_grad_()\n",
         "    \n",
-        "    def word_clouds(self, dest_path='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/', comment='words.png', show=True):\n",
+        "    def word_clouds(self, dest_path='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/', filename='words.png', show=True):\n",
         "        words = self.ds.vocab.get_itos()\n",
         "        fig = plt.figure(figsize=(21, 5))\n",
         "        plt.subplots_adjust(wspace=0.2)\n",
@@ -568,24 +570,24 @@
         "                plt.axis(\"off\")\n",
         "\n",
         "            i += 1\n",
-        "        plt.savefig(f'{dest_path}/{comment}', dpi=300)\n",
+        "        plt.savefig(f'{dest_path}/{filename}', dpi=300)\n",
         "        plt.show(block=show)\n",
-        "\n",
+        "    \n",
         "    def rev_words_thetas(self, rev_sens_ids):\n",
         "        \"\"\"\n",
-        "        TODO comment sentence_aspects_likelihood_theta\n",
+        "        TODO filename sentence_aspects_likelihood_theta\n",
         "        \"\"\"\n",
         "        return [self.theta[sen_ids] for sen_ids in rev_sens_ids]\n",
         "\n",
         "    def rev_words_phis(self, rev_sens_ids):\n",
         "        \"\"\"\n",
-        "        TODO comment sentence_aspects_likelihood_phi\n",
+        "        TODO filename sentence_aspects_likelihood_phi\n",
         "        \"\"\"\n",
         "        return [[self.phis[aspect_idx][sen_ids, :] for aspect_idx in range(self.ds.aspect_count)] for sen_ids in rev_sens_ids]\n",
         "    \n",
-        "    def dump_weights(self, dest_path='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/', comment=''):\n",
+        "    def dump_weights(self, dest_path='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/', filename=''):\n",
         "        weights = {'phis': self.phis, 'theta': self.theta}\n",
-        "        torch.save(weights,  f'{dest_path}/{comment}')\n",
+        "        torch.save(weights,  f'{dest_path}/{filename}')\n",
         "\n",
         "    def load_weights(self, src_path):\n",
         "        weights = torch.load(src_path, map_location=torch.device(dev))\n",
@@ -595,21 +597,19 @@
         "    def _linear_assignement(self, costs):\n",
         "        # for nll we want to minimize\n",
         "        return linear_sum_assignment(costs, maximize=False)\n",
-        "\n",
-        "    def plot_nll_hist(self):\n",
-        "        y = self.nll_hist\n",
-        "        x = list(range(len(y)))\n",
-        "\n",
-        "        plt.plot(x, y)\n",
+        "    \n",
+        "    def plot_nll_history(self, dir, filename):\n",
+        "        plt.xlabel('epoch')\n",
+        "        plt.ylabel('NLL')\n",
+        "        plt.xlim(left=0.0, right=self.train_epoch_history[-1])\n",
+        "        plt.ylim(bottom=min(0.0, min(self.train_nll_history)), top=max(max(self.train_nll_history), max(self.test_nll_history)))\n",
+        "        plt.plot(self.train_epoch_history, self.train_nll_history, '-o')\n",
+        "        plt.plot(self.test_epoch_history, self.test_nll_history, '-o')\n",
+        "        plt.legend(['train batch NLL', 'test mean batch NLL'], loc='upper right')\n",
+        "        plt.title('Train and test dataset NLL')\n",
+        "        plt.figure().set_facecolor('white') # no alpha please\n",
+        "        plt.savefig(os.path.join(dir, filename))\n",
         "        plt.show()\n",
-        "\n",
-        "        if self.test_nll_hist:\n",
-        "            y = self.test_nll_hist\n",
-        "            x = list(range(len(y)))\n",
-        "\n",
-        "            plt.plot(x, y)\n",
-        "            plt.show()\n",
-        "\n",
         "\n",
         "    def experiments(self, root_dir='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/'):\n",
         "        num_of_runs = 3\n",
@@ -628,11 +628,12 @@
         "\n",
         "            self.train(dest_path=path, optim='adam')\n",
         "\n",
-        "    def test_nll(self, debug=True):\n",
+        "    def test_nll(self, debug=False):\n",
         "        nlls = []\n",
         "        with torch.no_grad():\n",
         "            test_loader = DataLoader(self.test_ds, batch_size=100, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
-        "            for _, batch in enumerate(tqdm(test_loader, desc='test validation')):\n",
+        "            for i, batch in enumerate(tqdm(test_loader, desc='test validation')):\n",
+        "                batch_nlls = []\n",
         "                for (rev_sents_ids, review_aspects_scores) in batch:\n",
         "                    rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
         "                    rev_phis   = self.rev_words_phis(rev_sents_ids)\n",
@@ -652,16 +653,15 @@
         "                    row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
         "                    sents_aspect_preds_linear = sents_aspect_preds_max\n",
         "\n",
-        "                    # (most likely) aspect assignments (5)\n",
         "                    sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
         "                    \n",
-        "                    # sentence likelihood (6)\n",
-        "                    nlls.append(res_sents_scores.take_along_dim(sents_aspect_preds_linear[:, None], dim=1).sum().cpu().item())\n",
-        "        # if debug: ic(nlls)\n",
-        "        result = functools.reduce(lambda a, b: a + b, nlls)\n",
-        "        if debug: ic(result)\n",
-        "        if debug: ic(torch.exp(-torch.tensor(result)))\n",
-        "        return result\n",
+        "                    batch_nlls.append(res_sents_scores.take_along_dim(sents_aspect_preds_linear[:, None], dim=1).sum().cpu().item())\n",
+        "                nlls.append(functools.reduce(lambda a, b: a + b, batch_nlls))\n",
+        "        nll_sum = functools.reduce(lambda a, b: a + b, nlls)\n",
+        "        if debug: ic(nll_sum)\n",
+        "        if debug: ic(torch.exp(-torch.tensor(nll_sum)))\n",
+        "        mean_batch_nll = nll_sum / len(nlls)\n",
+        "        return mean_batch_nll\n",
         "\n",
         "\n",
         "    def train(self, dest_path='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/', epoch_count=1, optim='sgd'):\n",
@@ -693,21 +693,19 @@
         "            )\n",
         "        else:\n",
         "            assert False\n",
-        "        \n",
         "        self._sched = torch.optim.lr_scheduler.StepLR(self._optim, step_size=1, gamma=0.95)\n",
         "\n",
+        "\n",
         "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size])\n",
-        "    \n",
-        "        torch.set_printoptions(precision=None, threshold=None, edgeitems=None, linewidth=160, profile=None, sci_mode=None)\n",
         "\n",
         "        train_loader = DataLoader(self.train_ds, batch_size=100, shuffle=True, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
-        "        self.nll_hist = []\n",
-        "        self.test_nll_hist = []\n",
-        "\n",
+        "        self.train_epoch_history = []\n",
+        "        self.test_epoch_history = []\n",
+        "        self.train_nll_history = []\n",
+        "        self.test_nll_history = []\n",
         "        try:\n",
         "            for epoch in range(epoch_count):\n",
-        "                ic(epoch, epoch_count)\n",
-        "\n",
+        "                batch_count = len(train_loader)\n",
         "                for i, batch in enumerate(tqdm(train_loader, desc=f'train epoch {epoch}/{epoch_count}')):\n",
         "                    batch_nlls = []\n",
         "                    for (rev_sents_ids, review_aspects_scores) in batch:\n",
@@ -730,7 +728,7 @@
         "                        sents_aspect_preds_max = torch.argmin(res_sents_scores, dim=1)\n",
         "                        row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
         "                        sents_aspect_preds_linear = sents_aspect_preds_max\n",
-        "                        \n",
+        "\n",
         "                        # (most likely) aspect assignments (5)\n",
         "                        sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
         "                        \n",
@@ -740,39 +738,36 @@
         "                    batch_nll = torch.stack(batch_nlls).sum()\n",
         "                    self._optim.zero_grad(set_to_none=True)\n",
         "                    if 0 == i % 100:\n",
-        "                        self.nll_hist.append(batch_nll.cpu().detach().item())\n",
+        "                        self.train_nll_history.append(batch_nll.cpu().detach().item())\n",
+        "                        self.train_epoch_history.append(epoch + i / batch_count)\n",
         "                    if 0 == i % 5000 and i != 0:\n",
-        "                        self.dump_weights(dest_path=dest_path, comment=(f'-epoch-{epoch}-{epoch_count}-{int(i)}'))\n",
-        "                        self.word_clouds(dest_path=dest_path, comment=(f'cloud-epoch-{epoch}-{epoch_count}-{int(i)}.png'))\n",
-        "                    if 0 == i % 5000 and i != 0:\n",
+        "                        self.dump_weights(dest_path=dest_path, filename=(f'-epoch-{epoch}-{epoch_count}-{int(i)}'))\n",
+        "                        self.word_clouds(dest_path=dest_path, filename=(f'cloud-epoch-{epoch}-{epoch_count}-{int(i)}.png'))\n",
         "                        ic(self.rev_words_thetas([self.ds.vocab.lookup_indices(['taste', 'aroma', 'palete', 'antrunk'])]))\n",
-        "                        ic(int(i))\n",
-        "                        self.test_nll_hist.append(self.test_nll())\n",
-        "                        ic(batch_nll)\n",
+        "                        self.test_nll_history.append(self.test_nll())\n",
+        "                        self.test_epoch_history.append(epoch + i / batch_count)\n",
         "                    batch_nll.backward()\n",
         "\n",
         "                    self._optim.step()\n",
         "                self._sched.step()\n",
         "\n",
-        "                self.plot_nll_hist()\n",
-        "                self.dump_weights(dest_path=dest_path, comment=(f'weights-end'))\n",
-        "                self.word_clouds(dest_path=dest_path, comment=(f'cloud-end.png'))\n",
-        "\n",
+        "            self.plot_nll_history(dest_path, (f'plot-end.png'))\n",
+        "            self.dump_weights(dest_path=dest_path, filename=(f'weights-end'))\n",
+        "            self.word_clouds(dest_path=dest_path, filename=(f'cloud-end.png'))\n",
         "        except KeyboardInterrupt:\n",
         "            print('Interrupted.')\n",
         "\n",
-        "            self.plot_nll_hist()\n",
-        "            self.dump_weights(dest_path=dest_path, comment=(f'weights-exception'))\n",
-        "            self.word_clouds(dest_path=dest_path, comment=(f'cloud-exception.png'))\n",
-        "\n",
+        "            self.plot_nll_history(dest_path, (f'plot-exception.png'))\n",
+        "            self.dump_weights(dest_path=dest_path, filename=(f'weights-exception'))\n",
+        "            self.word_clouds(dest_path=dest_path, filename=(f'cloud-exception.png'))\n",
         "        except Exception as e:\n",
         "            ic(len(batch_nlls))\n",
         "            ic(denoms)\n",
         "            ic(rev_sents_ids)\n",
         "\n",
-        "            self.plot_nll_hist()\n",
-        "            self.dump_weights(dest_path=dest_path, comment=(f'weights-exception-'))\n",
-        "            self.word_clouds(dest_path=dest_path, comment=(f'cloud-exception.png'))\n",
+        "            self.plot_nll_history(dest_path, (f'plot-exception.png'))\n",
+        "            self.dump_weights(dest_path=dest_path, filename=(f'weights-exception'))\n",
+        "            self.word_clouds(dest_path=dest_path, filename=(f'cloud-exception.png'))\n",
         "\n",
         "            ic(batch_nll)\n",
         "            ic(denoms.size())\n",
@@ -783,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "id": "-BbREMkrBEph"
       },
@@ -807,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
