Use higher weight decay, remove trash

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "B_QTo-xBCelp",
         "colab": {
@@ -375,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "N5zmSYDBCg4B",
         "colab": {
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "FYkddHhTN8vW"
       },
@@ -474,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
@@ -616,23 +616,6 @@
         "        plt.savefig(os.path.join(dir, filename))\n",
         "        plt.show()\n",
         "\n",
-        "    def experiments(self, root_dir='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/'):\n",
-        "        num_of_runs = 3\n",
-        "\n",
-        "        for idx in range(num_of_runs):\n",
-        "            directory = str(datetime.datetime.now())\n",
-        "            path = os.path.join(root_dir, directory)\n",
-        "            os.mkdir(path)\n",
-        "\n",
-        "            self.train(dest_path=path)\n",
-        "\n",
-        "        for idx in range(num_of_runs):\n",
-        "            directory = str(datetime.datetime.now()) + '-adam'\n",
-        "            path = os.path.join(root_dir, directory)\n",
-        "            os.mkdir(path)\n",
-        "\n",
-        "            self.train(dest_path=path, optim='adam')\n",
-        "\n",
         "    def test_nll(self, debug=False):\n",
         "        nlls = []\n",
         "        with torch.no_grad():\n",
@@ -680,7 +663,7 @@
         "        lr = 0.0005\n",
         "        # lr = sum(self.ds.aspect_max) * 0.01 / train_size # for whole batch iteration\n",
         "\n",
-        "        weight_decay = 0.00005\n",
+        "        weight_decay = 0.0001\n",
         "        momentum = 0.1\n",
         "        if optim == 'sgd':\n",
         "            self._optim = torch.optim.SGD(\n",
@@ -786,17 +769,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "-BbREMkrBEph"
-      },
-      "outputs": [],
-      "source": [
-        "model = Model(rb)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "fyP8T2ASG4ZW"
@@ -805,8 +777,9 @@
       "source": [
         "%%capture output\n",
         "# %%script python --no-raise-error\n",
+        "# model = Model(rb)\n",
         "# model.train()\n",
-        "model.experiments(root_dir='./saves/')"
+        "Model.experiments(root_dir='./saves/')"
       ]
     },
     {
