Actually add experiments method

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -616,6 +616,24 @@
         "        plt.savefig(os.path.join(dir, filename))\n",
         "        plt.show()\n",
         "\n",
+        "    @staticmethod\n",
+        "    def experiments(root_dir='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/'):\n",
+        "        for _ in range(1):\n",
+        "            directory = str(datetime.datetime.now()) + '-adam'\n",
+        "            path = os.path.join(root_dir, directory)\n",
+        "            os.mkdir(path)\n",
+        "\n",
+        "            model = Model(rb)\n",
+        "            model.train(dest_path=path, optim='adam')\n",
+        "\n",
+        "        for _ in range(2):\n",
+        "            directory = str(datetime.datetime.now())\n",
+        "            path = os.path.join(root_dir, directory)\n",
+        "            os.mkdir(path)\n",
+        "            \n",
+        "            model = Model(rb)\n",
+        "            model.train(dest_path=path)\n",
+        "\n",
         "    def test_nll(self, debug=False):\n",
         "        nlls = []\n",
         "        with torch.no_grad():\n",
